src/objects/Line_Item__c.object
<CustomObject>
    <description>A Line Item is one of potentially many that make up a Book Order</description>
    <fields>
        <fullName>Book_Order__c</fullName>
        <description>The Book Order to which this Line Item belongs.</description>
        <inlineHelpText>The Book Order to which this Line Item belongs.</inlineHelpText>
        <label>Book Order</label>
        <referenceTo>Book_Order__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The book for which this Line Item is for.</description>
        <inlineHelpText>The book for which this Line Item is for.</inlineHelpText>
        <label>Book</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <formula>Quantity__c * Price_Each__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Each__c</fullName>
        <description>The price for each book on this Line Item.</description>
        <inlineHelpText>The price for each book on this Line Item.</inlineHelpText>
        <label>Price Each</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The quantity of this particular Line Item on this particular Book Order.</description>
        <inlineHelpText>The quantity of this particular Line Item on this particular Book Order.</inlineHelpText>
        <label>Quantity</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Line Item</label>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>